set https for submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/jamiew/git-friendly.git
 [submodule "fish/functions/pure"]
 	path = fish/functions/pure
-	url = git@github.com:paulirish/pure.git
+	url = https://github.com/paulirish/pure.git
